<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Preferences_Interaction2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/background"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <LinearLayout
                style="@style/preferences_linear_layout"
                android:layout_height="wrap_content"
                android:background="@drawable/surface_background">

                <TextView
                    android:id="@+id/textView"
                    style="@style/preferences_text"
                    android:text="@string/sport_radio_group_text" />

                <RadioGroup
                    android:id="@+id/radio_group_sport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="20dp">

                    <RadioButton
                        android:id="@+id/sport_vormittag"
                        android:checked="true"
                        android:text="@string/radio_button_vormittags_sport"
                        style="@style/preferences_radio_bottom"
                        />

                    <RadioButton
                        android:id="@+id/sport_nachmittag"
                        android:text="@string/radio_button_nachmittags_sport"
                        style="@style/preferences_radio_bottom"
                        />
                </RadioGroup>
            </LinearLayout>

            <Button
                android:id="@+id/button_sport"
                style="@style/general_button"
                android:text="@string/Button_plan_erstellung"
                app:layout_constraintBottom_toBottomOf="parent" />
        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>