<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/welcome_title_TV"
            style="@style/big_welcome_title"
            android:text="@string/welcome_registration_title"
            ></TextView>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/login_LL"
            android:visibility="invisible"
            style="@style/linear_layout_login"
            >

            <EditText
                android:id="@+id/login_password_ET"
                android:hint="Passwort"
                android:inputType="textPassword"
                style="@style/LoginButtons"
                ></EditText>

            <Button
                android:id="@+id/login_B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/login_button_label"
                >
            </Button>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/register_LL"
            style="@style/linear_layout_login"

            >
            <TextView
                style="@style/LoginButtons"
                android:text="@string/registrations_instruction"
                ></TextView>

            <EditText
                android:id="@+id/register_name_ET"
                style="@style/LoginButtons"
                android:hint="Name"></EditText>

            <EditText
                android:id="@+id/register_password_ET"
                android:hint="Passwort"
                android:inputType="textPassword"
                style="@style/LoginButtons"
                ></EditText>

            <EditText
                android:id="@+id/register_password_again_ET"
                android:hint="Passwort wiederholen"
                android:inputType="textPassword"
                style="@style/LoginButtons"
                ></EditText>
            <Button
                android:id="@+id/register_B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/registrate_login_label"
                >
            </Button>

        </LinearLayout>


    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>